# SmartGSE

./: .gitignore  BilancioESG.sln  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
examples/: README.md  sample_emissions.csv  sample_emissions.xlsx  sample_metrics.csv
smartgse/: __init__.py
smartgse/cli/: __init__.py  main.py
smartgse/core/: __init__.py  models.py
smartgse/data/: __init__.py  processors.py
smartgse/templates/: __init__.py
smartgse/utils/: calculations.py
src/CdmBootstrapper/: Program.cs
src/CdmBootstrapper/CDM/BilancioESG/: model.json
src/CdmBootstrapper/CDM/BilancioESG/entities/: Activity.csv  ActivityDetail_Electricity.csv  Approval.csv  Asset.csv  CalculationModel.csv  CalculationRun.csv  Customer.csv  DataQualityRule.csv  DataSource.csv  Disclosure.csv  DisclosureRequirement.csv  Emission.csv  EmissionAggregate.csv  EmissionFactor.csv  EnergyCertificate.csv  EnergyContract.csv  EsrsDatapoint.csv  EstimationFactor.csv  Evidence.csv  FactorSet.csv  GwpFactor.csv  IngestionJob.csv  Initiative.csv  LegalEntity.csv  Lock.csv  Meter.csv  Organization.csv  ReportTable.csv  ReportingPeriod.csv  Site.csv  Supplier.csv  Target.csv  Transformation.csv  Unit.csv
src/DataverseSchemaSeeder/: DataverseSchemaSeeder.csproj  Program.cs  appsettings.json
tests/: __init__.py  test_models.py
